# fitness_bot_ai

./: .env.example  .gitignore  BukaFit.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bukafit/: config.py
bukafit/ai/: codex.py  factory.py  memory.py  mock.py  prompts.py  provider.py
bukafit/bot/: keyboards.py  main.py  middleware.py
bukafit/bot/handlers/: chat.py  common.py  onboarding.py  training.py
bukafit/core/: clock.py  models.py  progression.py  schedule.py  schemas.py  streaks.py
bukafit/db/: repositories.py  session.py
bukafit/reminders/: scheduler.py
docs/superpowers/plans/: 2026-06-23-bukafit-bot-ai.md  2026-06-23-bukafit-foundation.md
docs/superpowers/specs/: 2026-06-23-bukafit-mvp-design.md
migrations/: env.py
migrations/versions/: b77780950f9b_init_schema.py
tests/: conftest.py  test_codex_provider.py  test_keyboards.py  test_memory.py  test_mock_provider.py  test_progression.py  test_provider_factory.py  test_repositories.py  test_schedule.py  test_schemas.py  test_streaks.py
